fix menu overflow

--- a/assets/css/layout/index.css
+++ b/assets/css/layout/index.css
@@ -142,6 +142,7 @@ body.block-editor-page {
 #adminmenuwrap {
 	background-color: transparent;
 	height: calc(100dvh - var(--wp-admin--admin-bar--height));
+	overflow-x: hidden;
 	overflow-y: scroll;
 	width: var(--admin-redesign-sidebar-width);
 	
